--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/source-map-support": "^0.5.10",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.14",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "vite": "^5.4.9",
