--- a/package.json
+++ b/package.json
@@ -15,17 +15,25 @@
     "@fastify/middie": "^9.0.2",
     "@fastify/static": "^8.0.2",
     "@mcansh/remix-fastify": "4.0.0",
+    "@prisma/client": "^5.21.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
     "@remix-run/server-runtime": "^2.13.1",
     "chalk": "^5.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "fastify": "^5.0.0",
     "get-port": "^7.1.0",
     "isbot": "^5.1.17",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.13.1",
@@ -37,6 +45,7 @@
     "eslint": "^8.57.0",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.14",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
