--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@remix-run/dev": "^2.13.1",
     "@remix-run/eslint-config": "^2.13.1",
+    "@types/node": "^22.7.9",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/source-map-support": "^0.5.10",
@@ -47,6 +48,7 @@
     "prettier": "^3.3.3",
     "prisma": "^5.21.1",
     "tailwindcss": "^3.4.14",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "vite": "^5.4.9",
